<resources>
    <string name="app_name">E- book reader</string>
    <string name="logo_desciption"> This is LOGO</string>
    <string name="edt_user_name">User Name</string>
    <string name="edt_password">  Password</string>
    <string name="log_in">Log In</string>
    <string name="register_text">Register Here...</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_text">Already a user... Log In</string>
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_downloads">Downloads</string>
    <string name="edt_full_name">Full Name</string>
    <string name="home_second">Home Second</string>
    <string name="edt_email_id">E-mail id</string>
    <string name="menu_favorites">Favorites</string>
    <string name="user_profile">User Profile</string>
    <string name="edt_phone">Contact number</string>
    <string name="menu_logout">Log Out</string>
    <string name="facebook_app_id">276524340123748</string>
    <string name="fb_login_protocol_scheme">fb276524340123748</string>

</resources>
